# unwordle

./: pyproject.toml
data/: README.md  words.txt
tools/: experiment.py
unwordle/: __init__.py  unwordle.py
