[tool.poetry]
name = "unwordle"
version = "0.1.0"
description = ""
authors = ["Pavel Smirnov <pavel_smirnov1@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.5.5"
pyright = "^1.1.374"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
